# ankamantatra

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/ankamantatra/: __main__.py  data.json  test.json  test2.json  utils.py
src/ankamantatra/commands/: __init__.py  list_questions.py  play_quizz.py
