[tool.poetry]
name = "ankamantatra"
version = "0.6.0"
description = ""
authors = ["Tsierenana Bôtramanagna Gracy <gtsierenana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
click-help-colors = "^0.9.1"

[tool.poetry.group.dev.dependencies]
build = "^0.8.0"
pip-tools = "^6.8.0"

[tool.poetry.scripts]
ankamantatra = "ankamantatra.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
