[tool.poetry]
name = "ankamantatra"
version = "1.0.0"
description = "A simple CLI quizz game"
authors = ["Tsierenana Bôtramanagna Gracy <gtsierenana@gmail.com>", "Radoheritiana <radoheritiana.rhja.123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click-help-colors = "^0.9.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
build = "^0.8.0"
pip-tools = "^6.8.0"

[tool.poetry.scripts]
ankamantatra = "ankamantatra.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
